# scrapy

./: pyproject.toml
ozon/: settings.py
ozon/spiders/: counts.py  ozon.py
